k8s/applications/media/arr/plex/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: plex
  namespace: arr
spec:
  parentRefs:
    - name: internal
      namespace: gateway
  hostnames:
    - plex.home.eudald.gr
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: plex
          port: 32400
